styles/contributions.module.scss
.container {
  display: flex;
  justify-content: center;
  padding: 1rem 0;
  overflow-x: auto;
  max-width: 100%;
}

.link {
  text-align: left;
  margin-top: 0.5rem;

  a {
    color: black;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }
}

